seqr/test/loader-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seqr-loader
  labels:
    app: seqr-loader
spec:
  restartPolicy: Never
  containers:
  - image: msseqr01acr.azurecr.io/azure/pipeline-runner:latest
    command: ["load_data_local.sh"]
    args:
      - "abfss://data@azcpg001sa.dfs.core.windows.net/GRCh38/1kg_sample_test.vcf.bgz"
      - "abfss://data@azcpg001sa.dfs.core.windows.net/GRCh38/1kg_sample_test.mt"
      - "38"
      - "WGS"
      - "test1kg"
    imagePullPolicy: Always
    name: seqr-loader
    volumeMounts:
      - name: ref-blobstore
        mountPath: "/vep_data"
        subPath: "vep/99.0"
        readOnly: true
      - name: hadoop-creds
        mountPath: "/spark_configs"
        readOnly: true
      - name: es-ca-volume
        mountPath: /es-certs
        readOnly: true
    env:
      - name: ELASTIC_SEARCH_PASSWORD
        valueFrom:
          secretKeyRef:
            name: seqr-secrets
            key: seqr_es_password
  volumes:
    - name: ref-blobstore
      persistentVolumeClaim:
        claimName: reference-volume-claim
    - name: hadoop-creds
      secret:
        secretName: hadoop-creds
        items:
        - key: core-site.xml
          path: core-site.xml
    - name: es-ca-volume
      secret:
        secretName: elasticsearch-master-certs
        items:
        - key: ca.crt
          path: ca.crt
