seqr/test/svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: seqr
  labels:
    name: seqr
    deployment: seqr
    app.kubernetes.io/instance: seqr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: seqr
    app.kubernetes.io/version: b4474628b50df0c1b85c1ff68be5d41a358e7d73
    helm.sh/chart: seqr-0.0.12
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: msr-seqr
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    name: seqr
    deployment: seqr
    app.kubernetes.io/instance: seqr
    app.kubernetes.io/name: seqr
